made responsive: min-width: 170px and max-width: 570px

--- a/src/content/content.css
+++ b/src/content/content.css
@@ -2,3 +2,13 @@
    background-color: #fd0;
    text-align: center;
 }
+
+.mainselect {}
+
+.selectCurrency1 {}
+
+.inputCarrency1 {}
+
+.inputCarrency2 {}
+
+.selectCurrency2 {}
