--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Reem+Kufi+Ink&display=swap');
+
+html {
+  background:
+    radial-gradient(ellipse at center, rgba(0, 0, 255, 0.3) 0%, rgba(0, 0, 0, 0) 70%),
+    /* niebieski */
+    radial-gradient(ellipse at center, rgba(255, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 70%),
+    /*czerwony */
+    radial-gradient(ellipse at center, rgba(0, 255, 0, 0.3) 0%, rgba(0, 0, 0, 0) 70%)
+    /*zielony */
+    #c3d7db;
+  background-repeat:
+    no-repeat,
+    no-repeat,
+    no-repeat;
+  background-size:
+    900px 900px,
+    900px 900px,
+    900px 900px;
+  background-attachment: fixed;
+
+  animation: bganimation 10s infinite;
+}
+
+body {
+  height: 100%;
+}
+
 html,
 body {
   margin: 0;
@@ -12,4 +41,30 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@keyframes bganimation {
+  0% {
+    background-position:
+      -100% -100%,
+      200% 200%,
+      -100% 200%,
+      200% -100%;
+  }
+
+  50% {
+    background-position:
+      150% 100%,
+      -200% 100%,
+      100% 0%,
+      0% 100%;
+  }
+
+  100% {
+    background-position:
+      -100% -100%,
+      200% 200%,
+      -100% 200%,
+      200% -100%;
+  }
 }
