--- a/src/styleMedia.css
+++ b/src/styleMedia.css
@@ -1,8 +1,6 @@
 @media screen and (min-width: 170px) and (max-width: 570px) {
    #header {
       display: flex;
-      /* width: 100vw; */
-      /* background-color: #fd0; */
       padding: 15px;
       gap: 20px;
       flex-direction: column;
@@ -19,6 +17,7 @@ h1 {
    margin: -10px;
    height: auto;
    font-family: 'Reem Kufi Ink', sans-serif;
+   text-align: center;
 }
 
 .valutaHeader {
